--- a/sass/docturu.scss
+++ b/sass/docturu.scss
@@ -20,7 +20,7 @@ html, body {
 .navbar-brand {
 	font-weight: 600;
 	text-align: center;
-	width: calc(100% - 92px);
+	width: 74%;
 	&.doc-title {
 		white-space: nowrap;
 		width: 83%;
